--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: curiousgene
 
+show_excerpts: true # Show excerpts on front page
+
 # Build settings
 theme: minima
 plugins:
